--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
+<head>
+
+  <title>My first web page</title>
+  
+</head>
+
 <body>
 
 <h1> this is a cool website </h1>
 
 </body>
+
 </html>
