--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 </head>
 
-<body>
+<body style="background-color:green">
 
 <h1> this is a cool website </h1>
 <h2> yes mark it totally is! </h2>
