--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
-<head>
+<head style = "font-family:helvetica">
 
   <title>My first web page</title>
-  
+ <h> 
 </head>
 
-<body style="background-color:green">
+<body style="background-color:white">
 
-<h1> this is a cool website </h1>
-<h2> yes mark it totally is! </h2>
+<h1 style = "font-family:helvetica" > This is Mark's website </h1>
+<hr>
+<h2 style = "font-family:helvetica"> One day I will put something on it. </h2>
 </body>
 
 </html>
