--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
+<!DOCTYPE html>
 <html>
-<head style = "font-family:helvetica">
+	<head style = "font-family:adelle">
+		<script src="https://use.typekit.net/nyo7tgw.js"></script>
+		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-  <title>My first web page</title>
- <h> 
-</head>
-
-<body style="background-color:white">
-
-<h1 style = "font-family:helvetica" > This is Mark's website. </h1>
-<hr>
-<h2 style = "font-family:helvetica"> One day I will put something on it. </h2>
-</body>
-
+		<title>My first web page</title>
+	 	<h> 
+	</head>
+	<body style="background-color:white">
+		<h1 style = "font-family:helvetica" > This is Mark's website. </h1>
+		<hr>
+		<h2 style = "font-family:helvetica"> One day I will put something on it. </h2>
+	</body>
 </html>
