--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 	<h> 
 	</head>
 	<body style="background-color:white">
-		<h1 style = "font-family:helvetica" > This is Mark's website. </h1>
+		<h1 style = "font-family:adelle" > This is Mark's website. </h1>
 		<hr>
 		<h2 style = "font-family:helvetica"> One day I will put something on it. </h2>
 	</body>
