--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body style="background-color:white">
 		<h1 style = "font-family:adelle" > This is Mark's website. </h1>
 		<hr>
-		<h2 style = "font-family:helvetica"> One day I will put something on it. </h2>
+		<h2 style = "font-family:adelle"> One day I will put something on it. </h2>
 	</body>
 </html>
