Added second page

--- a/about.html
+++ b/about.html
@@ -10,6 +10,6 @@
 	<body style="background-color:white">
 		<h1 style = "font-family:adelle" > This is Mark's website. </h1>
 		<hr>
-		<h2 style = "font-family:adelle"> You can read about me <a href="about.html"> here </a> </h2>
+		<h2 style = "font-family:adelle"> This page contains details about me </h2>
 	</body>
 </html>
