--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body style="background-color:white">
 		<h1 style = "font-family:adelle" > Mark Graham </h1>
 		<hr>
-		<h2 style = "font-family:adelle"> You can read about me <a href="about"> here </a> </h2>
+		<h2 style = "font-family:adelle"> You can read about me <a href="about.html"> here </a> </h2>
 	</body>
 </html>
