Added css sheet

--- a/about.html
+++ b/about.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head style = "font-family:adelle">
+	<head>
+		<link type="text/css" rel="stylesheet" href="style.css"/>
+
 		<script src="https://use.typekit.net/nyo7tgw.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<title>Mark Graham</title>
 	 	<h> 
 	</head>
-	<body style="background-color:white">
-		<h1 style = "font-family:adelle" > Mark Graham </h1>
-		<hr>
-		<h2 style = "font-family:adelle"> This page contains details about me </h2>
+	<body>
+		<h1> Mark Graham </h1>
+		<div></div>
+		<h2> This page contains details about me </h2>
 	</body>
 </html>
