--- a/about.html
+++ b/about.html
@@ -10,8 +10,10 @@
 	 	<h> 
 	</head>
 	<body>
-		<h1> Mark Graham </h1>
+		<p id="title"> Mark Graham </p>
+		<a href="index.html"> <p id ="button"> Home </p></a>
+		<a href="about.html"><p id ="button-current"> About </p> </a>
 		<div></div>
-		<h2> This page contains details about me </h2>
+		<p> This page contains details about me <p>
 	</body>
 </html>
