--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	 	<h> 
 	</head>
 	<body>
-		<h1> Mark Graham </h1>
+		<p id="title"> Mark Graham </p>
+		<a href="index.html"> <p id ="button-current"> Home</p></a>
+		<a href="about.html"><p id ="button"> About</p> </a>
 		<div></div>
-		<h2 style = "font-family:adelle"> You can read about me <a href="about.html"> here </a> </h2>
+		<p> You can read about me <a href="about.html"> <u>here</u> </a><p>
 	</body>
 </html>
 
