--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<p id="title"> Mark Graham </p>
 		<a href="index.html"> <p id ="button"> Home </p></a>
 		<a href="about.html"><p id ="button-current"> About </p> </a>
-		<a href="more.html"><p id ="button-current"> More </p> </a>
+		<a href="more.html"><p id ="button"> More </p> </a>
 		<div id="header"></div>
 		<p> This page contains details about me <p>
 	</body>
