--- a/more.html
+++ b/more.html
@@ -15,27 +15,13 @@
 		<a href="about.html"><p id ="button"> About </p> </a>
 		<a href="more.html"><p id ="button-current"> More </p> </a>
 		<div id="header"></div>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
-		<p> This page contains details about me <p>
-		<br>
+		<p> This page contains some javascript: </p>
+
+		<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
 	</body>
 </html>
