--- a/more.html
+++ b/more.html
@@ -7,21 +7,21 @@
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<title>Mark Graham</title>
-	 	<h> 
+	 	<h><!-- I don't think this little <h> is doing anything --> 
 	</head>
 	<body>
 		<p id="title"> Mark Graham </p>
-		<a href="index.html"> <p id ="button"> Home</p></a>
-		<a href="about.html"><p id ="button"> About</p> </a>
-		<a href="more.html"><p id ="button-current"> More</p> </a>
+		<a href="index.html"> <p id ="button"> Home</p></a><!--IDs should be unique...-->
+		<a href="about.html"><p id ="button"> About</p> </a><!--...To give the same one to multiple elements, use class="button" instead-->
+		<a href="more.html"><p id ="button-current"> More</p> </a><!--You don't need the <p> tags here. Just do <a href="" id/class="">About</a> -->
 		<div id="header"></div>
 		<p> This page contains some javascript: </p>
 
-		<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+		<button type="button" id="timeButton">Click me to display Date and Time.</button><!-- Gave this an id -->
+		<p id="demo"></p>
 
-<p id="demo"></p>
-
+		<button type="button" id="timeButton2">Click me to display Date and Time, without using innerHTML.</button><!-- Gave this an id -->
+		<p id="currentDateAndTime"></p>
+		<script type="text/javascript" src="more.js"></script><!--Have placed script tags at bottom of body, so that it loads the content of the page and then the script, so user doesn't get bored waiting for it to load. If the script is essential you might want to put in the head instead.-->
 	</body>
 </html>
