--- a/about.html
+++ b/about.html
@@ -7,14 +7,13 @@
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<title>Mark Graham</title>
-	 	<h> 
 	</head>
 	<body>
 		<p id="title"> Mark Graham </p>
-		<a href="index.html"> <p id ="button"> Home</p></a>
-		<a href="about.html"><p id ="button-current"> About</p> </a>
-		<a href="more.html"><p id ="button"> More</p> </a>
-		<div id="header"></div>
+		<a href="index.html" class="button">Home</a>
+		<a href="about.html" class="button-current">About</a>
+		<a href="more.html" class="button">More</a>
+		<div id="horizontalLine"></div>
 		<p> This page contains details about me <p>
 	</body>
 </html>
