--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<title>Mark Graham</title>
-	 	<!-- <h> This opening <h> tag should not be here -->
 	</head>
 	<body>
 		<p id="title"> Mark Graham </p>
-		<a href="index.html"> <p id ="button-current"> Home</p></a>
-		<a href="about.html"><p id ="button"> About</p> </a>
-		<a href="more.html"><p id ="button"> More</p> </a>
+		<a href="index.html" class="button-current">Home</a>
+		<a href="about.html" class="button">About</a>
+		<a href="more.html" class="button">More</a>
 		<div id="horizontalLine"></div>
 		<p> You can read about me <a href="about.html"> <u>here</u> </a><p><!--Dont use <u> tags! Use css for style ("text-decoration = underline")-->
 		<div id="magicText">
