Fix branding issue
Resolves marksgraham/markgraham539.github.io#3 with aplomb

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p id="mark">MARK</p>
 			<p id="s"> S</p>
 			<p id="graham"> GRAHAM</p>
-			<p id="dotcom"> .COM</p>
+			<p id="dotcom"> .CO.UK</p>
 		</div>
 	</body>
 </html>
